--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,11 +12,14 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
-    <android.support.design.widget.TabLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    <android.support.design.widget.TabLayout
         android:id="@+id/tabs"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_weight="0"
-        app:tabIndicatorHeight="50dp" />
+        android:layout_height="53dp"
+        android:background="@android:color/black"
+        android:paddingTop="5dip"
+        app:tabIndicatorColor="@android:color/transparent"
+        app:tabSelectedTextColor="#979797"
+        app:tabTextColor="#FFFFFF" />
 
 </LinearLayout>
