--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -32,7 +32,7 @@
     <EditText
         android:layout_width="0dp"
         android:layout_height="48dp"
-        android:inputType="textPassword"
+        android:inputType="number"
         android:hint="验证码"
         android:ems="10"
         android:layout_alignParentTop="true"
@@ -49,7 +49,7 @@
     <EditText
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/password"
         android:layout_alignParentTop="true"
