--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -3,15 +3,48 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.runnerfun.widget.MapBtnWidget
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:id="@+id/panel"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        >
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="暂停"
+            android:textColor="#fff"
+            android:id="@+id/pause"
+            android:layout_gravity="center_vertical"
+            android:textSize="22sp"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/stop"
+            android:textColor="#fff"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_horizontal"
+            android:text="结束"
+            android:textSize="22sp"
+            android:layout_weight="1"
+            />
+    </com.runnerfun.widget.MapBtnWidget>
+
     <com.amap.api.maps2d.MapView
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
+        android:layout_above="@id/panel"
         android:layout_alignParentStart="true">
 
     </com.amap.api.maps2d.MapView>
+
     <ImageView
         android:layout_width="80dp"
         android:layout_height="80dp"
@@ -20,13 +53,6 @@
         android:layout_marginLeft="50dp"
         />
 
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:id="@+id/what"
-        android:layout_marginRight="50dp"
-        android:src="@mipmap/ic_launcher"
-        android:layout_alignParentRight="true"
-        />
+
 
 </RelativeLayout>
