--- a/app/src/main/res/layout/fragment_run.xml
+++ b/app/src/main/res/layout/fragment_run.xml
@@ -1,67 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:text="开始"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/start"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="56dp"
-        app:layout_constraintTop_toBottomOf="@+id/Info" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="60"
+        android:background="#000"
+        >
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/icon_shezhi"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="10dp"
+            android:id="@+id/config"
+            />
 
-    <Chronometer
-        android:layout_width="0dp"
-        android:layout_height="66dp"
-        android:id="@+id/main_timer"
-        android:gravity="center"
-        android:textSize="50dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="80dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="已获购物里币:"
+            android:textColor="#fff"
+            android:textSize="14sp"
+            android:id="@+id/money"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/config"
+            android:layout_marginTop="10dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:layout_toRightOf="@id/money"
+            android:layout_alignBottom="@id/money"
+            android:id="@+id/money_value"
+            android:text="700"
+            android:textColor="#fff"
+            android:layout_marginLeft="6dp"
+            />
 
-    <TextView
-        android:text="000"
-        android:layout_width="271dp"
-        android:layout_height="75dp"
-        android:id="@+id/Info"
-        app:layout_constraintLeft_toLeftOf="@+id/main_timer"
-        app:layout_constraintRight_toRightOf="@+id/main_timer"
-        app:layout_constraintHorizontal_bias="1.0"
-        android:layout_marginTop="48dp"
-        app:layout_constraintTop_toBottomOf="@+id/main_timer" />
+        <Chronometer
+            android:layout_width="270dp"
+            android:layout_height="100dp"
+            android:id="@+id/chronometer"
+            android:text="00:00:00"
+            android:textSize="80sp"
+            android:textColor="#fff"
+            android:layout_marginTop="30dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/money"
+            android:gravity="center"
+            />
 
-    <TextView
-        android:text="跑步"
-        android:layout_width="62dp"
-        android:layout_height="33dp"
-        android:id="@+id/run"
-        app:layout_constraintBottom_toTopOf="@+id/main_timer"
-        android:layout_marginBottom="24dp"
-        app:layout_constraintRight_toLeftOf="@+id/map"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="10dp"
+            >
 
-    <TextView
-        android:text="地图"
-        android:layout_width="63dp"
-        android:layout_height="34dp"
-        android:id="@+id/map"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="24dp"
-        app:layout_constraintHorizontal_bias="0.62" />
+            <include
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                layout="@layout/unit_table"
+                android:id="@+id/km"
+                />
+            <include
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                layout="@layout/unit_table"
+                android:id="@+id/speed"
+                />
+            <include
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                layout="@layout/unit_table"
+                android:id="@+id/kacl"
+                />
+        </LinearLayout>
+    </RelativeLayout>
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:background="@drawable/run_back"
+        android:layout_height="0dp"
+        android:layout_weight="40"
+        android:orientation="vertical"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3"
+            >
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/btn_map"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/btn_map"
+                android:layout_marginTop="18dp"
+                />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="7"
+            >
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/btn_go"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/btn_map"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="20dp"
+                android:id="@+id/btn_run"
+                />
+        </LinearLayout>
+
+    </LinearLayout>
+
+</LinearLayout>
