--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -3,11 +3,22 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.runnerfun.widget.HorizontalListView
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/data_list"
+        android:numColumns="100"
+        android:columnWidth="50dp"
+        android:background="#0f0"
+        />
+
+
     <com.runnerfun.widget.MapBtnWidget
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:id="@+id/panel"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@id/data_list"
         android:orientation="horizontal"
         >
         <TextView
@@ -49,10 +60,10 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:id="@+id/back"
-        android:src="@mipmap/ic_launcher"
-        android:layout_marginLeft="50dp"
-        />
-
-
+        android:src="@drawable/map_back_btn"
+        android:layout_marginLeft="20dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
