--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,83 +5,109 @@
     android:id="@+id/activity_register"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.lixiaoyang.runnerfun.RegisterActivity">
+    android:background="@drawable/register_bg"
+    tools:context="com.runnerfun.RegisterActivity">
 
     <EditText
+        android:id="@+id/tel"
+        style="@style/EditTextStyle"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="手机号"
-        android:ems="10"
+        android:layout_height="50dp"
         android:layout_alignLeft="@+id/code"
         android:layout_alignStart="@+id/code"
-        android:id="@+id/tel"
         android:layout_marginEnd="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.57" />
-    <EditText
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:inputType="number"
-        android:hint="验证码"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="100dp"
         android:ems="10"
+        android:hint="手机号"
+        android:inputType="textPersonName"
+        app:layout_constraintHorizontal_bias="0.57"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/code"
+        style="@style/EditTextStyle"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:id="@+id/code"
-        app:layout_constraintLeft_toLeftOf="@+id/tel"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/tel"
-        app:layout_constraintRight_toLeftOf="@+id/get_code"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.25" />
+        android:ems="10"
+        android:hint="验证码"
+        android:inputType="number"
+        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintLeft_toLeftOf="@+id/tel"
+        app:layout_constraintRight_toLeftOf="@+id/get_code"
+        app:layout_constraintTop_toBottomOf="@+id/tel" />
 
     <EditText
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
         android:id="@+id/password"
-        android:layout_alignParentTop="true"
+        style="@style/EditTextStyle"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
         android:layout_alignLeft="@+id/tel"
+        android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/tel"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/code"
+        android:ems="10"
+        android:hint="密码"
+        android:inputType="textPassword"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/tel"
         app:layout_constraintRight_toRightOf="@+id/tel"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:hint="密码" />
+        app:layout_constraintTop_toBottomOf="@+id/code" />
 
     <Button
-        android:text="获取验证码"
+        android:id="@+id/get_code"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
-        android:id="@+id/get_code"
+        android:gravity="center"
+        android:text="获取验证码"
+        android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="@+id/code"
         app:layout_constraintRight_toRightOf="@+id/tel"
         app:layout_constraintTop_toTopOf="@+id/code"
-        app:layout_constraintBottom_toBottomOf="@+id/code"
-        app:layout_constraintVertical_bias="0.0"
-        android:textSize="13sp"
-        android:gravity="center" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:text="注册"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
         android:id="@+id/register"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
         android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/password"
+        android:background="#E60025"
+        android:text="注册"
+        android:textColor="#FFFFFF"
+        android:textSize="22sp"
         app:layout_constraintLeft_toLeftOf="@+id/tel"
-        app:layout_constraintRight_toRightOf="@+id/tel" />
+        app:layout_constraintRight_toRightOf="@+id/tel"
+        app:layout_constraintTop_toBottomOf="@+id/password" />
+
+    <TextView
+        android:id="@+id/title_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="注册"
+        android:textColor="#777777"
+        android:textSize="24sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/back_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/title_label"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/title_label"
+        app:layout_constraintVertical_bias="0.50"
+        app:srcCompat="@drawable/return_btn" />
 
 </android.support.constraint.ConstraintLayout>
