--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,11 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="EditTextStyle">
+        <item name="android:background">@drawable/edit_text_bg</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#777777</item>
+        <item name="android:textColorHint">#777777</item>
+    </style>
+
 </resources>
