add send code interval for register and reset password fix ui of ResetPasswordActivity

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,14 +15,16 @@
         android:layout_height="50dp"
         android:layout_alignLeft="@+id/code"
         android:layout_alignStart="@+id/code"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="100dp"
         android:ems="10"
         android:hint="手机号"
         android:inputType="textPersonName"
+        android:paddingLeft="10dp"
+        android:paddingStart="10dp"
         app:layout_constraintHorizontal_bias="0.57"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -40,6 +42,8 @@
         android:ems="10"
         android:hint="验证码"
         android:inputType="number"
+        android:paddingLeft="10dp"
+        android:paddingStart="10dp"
         app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintLeft_toLeftOf="@+id/tel"
         app:layout_constraintRight_toLeftOf="@+id/get_code"
@@ -56,6 +60,8 @@
         android:ems="10"
         android:hint="密码"
         android:inputType="textPassword"
+        android:paddingLeft="10dp"
+        android:paddingStart="10dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/tel"
         app:layout_constraintRight_toRightOf="@+id/tel"
@@ -107,7 +113,6 @@
         app:layout_constraintBottom_toBottomOf="@+id/title_label"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@+id/title_label"
-        app:layout_constraintVertical_bias="0.50"
         app:srcCompat="@drawable/return_btn" />
 
 </android.support.constraint.ConstraintLayout>
