--- a/app/src/main/res/layout/activity_record_detail.xml
+++ b/app/src/main/res/layout/activity_record_detail.xml
@@ -2,10 +2,10 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_coin_detail"
+    android:id="@+id/activity_record_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.runnerfun.CoinDetailActivity">
+    tools:context="com.runnerfun.RecordDetailActivity">
 
     <LinearLayout
         android:id="@+id/record_value_content"
@@ -23,22 +23,22 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <RelativeLayout
-            android:id="@+id/user_record_content"
+            android:id="@+id/personal_record_content"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1">
 
             <TextView
-                android:id="@+id/user_record"
+                android:id="@+id/personal_record"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="运动里币"
+                android:text="个人记录"
                 android:textColor="#FFFFFF"
                 android:textSize="18sp" />
 
             <ImageView
-                android:id="@+id/user_record_selected"
+                android:id="@+id/personal_record_selected"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
@@ -49,22 +49,49 @@
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/system_record_content"
+            android:id="@+id/week_record_content"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1">
 
             <TextView
-                android:id="@+id/system_record"
+                android:id="@+id/week_record"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="系统里币"
+                android:text="周记录"
                 android:textColor="#FFFFFF"
                 android:textSize="18sp" />
 
             <ImageView
-                android:id="@+id/system_record_selected"
+                android:id="@+id/week_record_selected"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:contentDescription="@null"
+                android:src="@drawable/tab_selected"
+                android:visibility="gone"
+                app:srcCompat="@drawable/tab_selected" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/total_record_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/total_record"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="总记录"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp" />
+
+            <ImageView
+                android:id="@+id/total_record_selected"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
@@ -95,7 +122,7 @@
         app:srcCompat="@drawable/icon_back" />
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/coin_fragment_pager"
+        android:id="@+id/record_fragment_pager"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
