--- a/app/src/main/res/drawable/user_info_init_bg.xml
+++ b/app/src/main/res/drawable/user_info_init_bg.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:left="-2.5dp"
-        android:right="-2.5dp"
-        android:top="-2.5dp">
+    <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
             <solid android:color="#00000000" />
             <stroke
                 android:width="1dp"
-                android:color="#ededed" />
+                android:color="#FFF" />
         </shape>
     </item>
 </layer-list>
