--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,10 +12,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:contentDescription="@null"
+        android:src="@drawable/logo"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/tel"
@@ -97,11 +97,11 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
+        android:src="@drawable/wei"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@drawable/wei" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
         android:id="@+id/login_qq"
@@ -111,11 +111,11 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:src="@drawable/qq"
         app:layout_constraintBottom_toBottomOf="@+id/login_weixin"
         app:layout_constraintLeft_toRightOf="@+id/login_weixin"
         app:layout_constraintRight_toLeftOf="@+id/login_weibo"
-        app:layout_constraintTop_toTopOf="@+id/login_weixin"
-        app:srcCompat="@drawable/qq" />
+        app:layout_constraintTop_toTopOf="@+id/login_weixin" />
 
     <ImageView
         android:id="@+id/login_weibo"
@@ -125,11 +125,11 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
+        android:src="@drawable/weibo"
         app:layout_constraintBottom_toBottomOf="@+id/login_weixin"
         app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@drawable/weibo" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/thirdLoginLable"
