--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -123,9 +123,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
+        android:src="@drawable/return_btn"
         app:layout_constraintBottom_toBottomOf="@+id/title_label"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/title_label"
-        app:srcCompat="@drawable/return_btn" />
+        app:layout_constraintTop_toTopOf="@+id/title_label" />
 
 </android.support.constraint.ConstraintLayout>
