--- a/app/src/main/res/layout/activity_user_info_edit.xml
+++ b/app/src/main/res/layout/activity_user_info_edit.xml
@@ -58,7 +58,7 @@
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:layout_marginStart="12dp"
-            android:background="@drawable/edit_text_bg">
+            android:background="@drawable/user_info_edit_bg">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -89,7 +89,7 @@
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:layout_marginStart="12dp"
-            android:background="@drawable/edit_text_bg">
+            android:background="@drawable/user_info_edit_bg">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -131,7 +131,7 @@
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:layout_marginStart="12dp"
-            android:background="@drawable/edit_text_bg">
+            android:background="@drawable/user_info_edit_bg">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -176,7 +176,7 @@
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:layout_marginStart="12dp"
-            android:background="@drawable/edit_text_bg">
+            android:background="@drawable/user_info_edit_bg">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -209,7 +209,7 @@
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:layout_marginStart="12dp"
-            android:background="@drawable/edit_text_bg">
+            android:background="@drawable/user_info_edit_bg">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -242,7 +242,7 @@
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:layout_marginStart="12dp"
-            android:background="@drawable/edit_text_bg">
+            android:background="@drawable/user_info_edit_bg">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -275,7 +275,7 @@
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:layout_marginStart="12dp"
-            android:background="@drawable/edit_text_bg">
+            android:background="@drawable/user_info_edit_bg">
 
             <TextView
                 android:layout_width="wrap_content"
