--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -13,13 +13,13 @@
 
         <ImageView
             android:id="@+id/user_avatar"
+            android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginTop="70dp"
+            android:src="@drawable/icon_avatar"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/icon_avatar"
-            android:layout_width="150dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/user_name"
@@ -40,9 +40,9 @@
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="17dp"
+            android:src="@drawable/icon_setting"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/icon_setting" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/user_sign"
@@ -138,7 +138,6 @@
 
         <TextView
             android:id="@+id/record"
-            android:background="@drawable/user_menu_bg"
             android:layout_width="0dp"
             android:layout_height="59dp"
             android:layout_marginEnd="16dp"
@@ -146,6 +145,7 @@
             android:layout_marginRight="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="60dp"
+            android:background="@drawable/user_menu_bg"
             android:gravity="center_vertical"
             android:paddingLeft="35dip"
             android:paddingStart="35dip"
@@ -174,13 +174,13 @@
 
         <TextView
             android:id="@+id/rule"
-            android:background="@drawable/user_menu_bg"
             android:layout_width="0dp"
             android:layout_height="59dp"
             android:layout_marginEnd="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginStart="16dp"
+            android:background="@drawable/user_menu_bg"
             android:gravity="center_vertical"
             android:paddingLeft="35dip"
             android:paddingStart="35dip"
@@ -196,10 +196,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
+            android:src="@drawable/icon_record"
             app:layout_constraintBottom_toBottomOf="@+id/record"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/record"
-            app:srcCompat="@drawable/icon_record" />
+            app:layout_constraintTop_toTopOf="@+id/record" />
 
         <ImageView
             android:id="@+id/mile"
@@ -207,10 +207,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
+            android:src="@drawable/icon_coin_detail"
             app:layout_constraintBottom_toBottomOf="@+id/detail"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/detail"
-            app:srcCompat="@drawable/icon_coin_detail" />
+            app:layout_constraintTop_toTopOf="@+id/detail" />
 
         <ImageView
             android:id="@+id/level"
@@ -218,10 +218,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
+            android:src="@drawable/icon_rules"
             app:layout_constraintBottom_toBottomOf="@+id/rule"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/rule"
-            app:srcCompat="@drawable/icon_rules" />
+            app:layout_constraintTop_toTopOf="@+id/rule" />
 
         <ImageView
             android:id="@+id/enter_treasure"
@@ -229,10 +229,10 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
+            android:src="@drawable/icon_enter"
             app:layout_constraintBottom_toBottomOf="@+id/record"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/record"
-            app:srcCompat="@drawable/icon_enter" />
+            app:layout_constraintTop_toTopOf="@+id/record" />
 
         <ImageView
             android:id="@+id/enter_mile"
@@ -240,10 +240,10 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
+            android:src="@drawable/icon_enter"
             app:layout_constraintBottom_toBottomOf="@+id/detail"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/detail"
-            app:srcCompat="@drawable/icon_enter" />
+            app:layout_constraintTop_toTopOf="@+id/detail" />
 
         <ImageView
             android:id="@+id/enter_level"
@@ -251,10 +251,10 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
+            android:src="@drawable/icon_enter"
             app:layout_constraintBottom_toBottomOf="@+id/rule"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/rule"
-            app:srcCompat="@drawable/icon_enter" />
+            app:layout_constraintTop_toTopOf="@+id/rule" />
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
