--- a/app/src/main/res/layout/layout_coin_list_item.xml
+++ b/app/src/main/res/layout/layout_coin_list_item.xml
@@ -28,8 +28,7 @@
         android:src="@drawable/icon_location"
         android:visibility="invisible"
         app:layout_constraintLeft_toRightOf="@+id/coin_value"
-        app:layout_constraintTop_toTopOf="@+id/coin_value"
-        app:srcCompat="@drawable/icon_location" />
+        app:layout_constraintTop_toTopOf="@+id/coin_value" />
 
     <TextView
         android:id="@+id/coin_detail"
