--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,7 +20,7 @@
     </style>
 
     <style name="UserInfoEditTextStyle">
-        <item name="android:background">@drawable/edit_text_bg</item>
+        <item name="android:background">@drawable/user_info_init_bg</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">#FFF</item>
         <item name="android:textColorHint">#FFF</item>
